tests/machine/x/st/sort_stable.out
Object: OrderedCollection new: 16 "<0x7f668081d4a0>" error: did not understand #add:at:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
OrderedCollection(Object)>>doesNotUnderstand: #add:at: (SysExcept.st:1448)
optimized [] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/sort_stable.st:8)
Array(SequenceableCollection)>>do: (SeqCollect.st:827)
optimized [] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/sort_stable.st:7)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/sort_stable.st:5)
nil