tests/machine/x/st/sort_stable.st
" Generated by Mochi compiler v0.10.25 on 2025-07-13T05:07:59Z
"
| items result |
items := {Dictionary from:{'n'->1. 'v'->'a'}. Dictionary from:{'n'->1. 'v'->'b'}. Dictionary from:{'n'->2. 'v'->'c'}}.
result := [ | tmp |
  tmp := OrderedCollection new.
  items do: [:i |
    tmp add: i at: 'v'.
  ].
  tmp := tmp asSortedCollection: [:a :b | a at: 'n' < b at: 'n'].
  tmp
] value.
Transcript show: (result) printString; cr.
